Kubernetes/apps/prod/sinless-games/policies/peerauthentication-default.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: sinless-games
spec:
  mtls:
    mode: STRICT
