Kubernetes/apps/prod/sinless-games/policies/authorizationpolicy-require-mtls.yaml
# Kubernetes/apps/prod/sinless-games/policies/authorizationpolicy-require-mtls.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: sinless-games-require-mtls
  namespace: sinless-games
  labels:
    app.kubernetes.io/name: sinless-games-require-mtls
    app.kubernetes.io/component: mesh-authorization
    app.kubernetes.io/part-of: sinless-games-platform
    app.kubernetes.io/managed-by: gitops
    security.sinlessgames.io/policy: authorization
    security.sinlessgames.io/mtls: required
spec:
  action: DENY
  rules:
    - from:
        - source:
            notPrincipals:
              - "*"
