Kubernetes/apps/prod/sinless-games/policies/networkpolicy-default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: sinless-games
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
