Kubernetes/apps/prod/sinless-games/policies/networkpolicy-homepage.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: homepage-allow-ingress
  namespace: sinless-games
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: homepage
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
      ports:
        - protocol: TCP
          port: 3000
