Kubernetes/apps/prod/sinless-games/policies/networkpolicy-n8n.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: n8n-allow-ingress
  namespace: sinless-games
spec:
  podSelector:
    matchLabels:
      app: n8n
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: istio-system
      ports:
        - protocol: TCP
          port: 5678
